# atopiCodes

./: atopiNonAtopiClassify.ipynb  binaryClassificationAtopy.ipynb  createDatasetAtopiTF.ipynb  melanomaSkinEfficentNet.ipynb  requirements.txt  tfLabelling.ipynb
.ipynb_checkpoints/: atopiNonAtopiClassify-checkpoint.ipynb  melanomaSkinEfficentNet-checkpoint.ipynb
Checkpoints/: model.ckpt.index  model_1000.ckpt.index
Tensorboard/model/train/: events.out.tfevents.1645176320.hcube.10583.0.v2  events.out.tfevents.1645176469.hcube.10583.2.v2  events.out.tfevents.1645176507.hcube.10583.4.v2  events.out.tfevents.1645176963.hcube.10583.6.v2
Tensorboard/model/validation/: events.out.tfevents.1645176324.hcube.10583.1.v2  events.out.tfevents.1645176474.hcube.10583.3.v2  events.out.tfevents.1645176508.hcube.10583.5.v2  events.out.tfevents.1645176964.hcube.10583.7.v2
logs/fit/20220221-161222/train/: events.out.tfevents.1645427557.hcube.5712.0.v2  events.out.tfevents.1645427573.hcube.5712.1.v2
preprocessing/: badskinmen.txt  create_nonAtopiList.py  extract_zipfiles.py  map_values_to_ims.py  offline_augmentation.py  patientNumber_imName_DegradationRate.csv  preprocess_csv.py  preprocessed_file.csv  resize_images.py  transfer_accurate_masksToResults.py
preprocessing/csvs/: nonAtopiImagesList.csv  preprocessed_file.csv
preprocessing/others/: worstskinmen.csv
sift/: CMakeLists.txt  execute.sh  pysift.py
sift/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
sift/src/: displayImage.cpp  sift_display.cpp
(+2 files in other folders)
